<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_random_objects</name>
  <version>0.1.0</version>
  <description>Gazebo plugin to place random objects</description>
  <maintainer email="w@wltjr.com">William L. Thomson Jr.</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
